--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,7 +14,7 @@
         android:background="@color/colorPrimary"
         app:elevation="4dp"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="Settings"
+        app:title="@string/label_settings"
         app:titleTextColor="@color/colorTextToolbar" />
 
     <FrameLayout
