--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -12,7 +12,7 @@
         android:background="@color/colorPrimary"
         app:elevation="4dp"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="Help"
+        app:title="@string/label_help"
         app:titleTextColor="@color/colorTextToolbar" />
 
     <FrameLayout
