--- a/app/src/main/res/layout/activity_image_view.xml
+++ b/app/src/main/res/layout/activity_image_view.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@android:color/black"
-        app:title="Neapol"
+        app:title=""
         app:titleTextColor="@android:color/white" />
 
 </FrameLayout>
