--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -49,7 +49,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar_details"
+        android:layout_below="@id/toolbar_profile"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <FrameLayout
