--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:background="@drawable/button_sign_selector"
-            android:text="@string/label_login" />
+            android:text="@string/btn_label_login" />
 
         <TextView
             android:id="@+id/sign_in_tv_forgot_password"
@@ -91,7 +91,7 @@
             android:layout_marginTop="12dp"
             android:layout_weight="0.07"
             android:padding="10dp"
-            android:text="Forgot password?"
+            android:text="@string/btn_label_forgot_password"
             android:textAllCaps="false"
             android:textColor="#03A9F4"
             android:textSize="16sp" />
@@ -110,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="16dp"
-            android:text="Log In Using"
+            android:text="@string/label_log_in_using"
             android:textAllCaps="false"
             android:textColor="#03A9F4"
             android:textSize="16sp" />
@@ -179,7 +179,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Create an Account"
+        android:text="@string/label_create_an_account"
         android:textAllCaps="false"
         android:textColor="#03A9F4"
         android:textSize="16sp" />
