--- a/app/src/main/res/layout/fragment_add_compare.xml
+++ b/app/src/main/res/layout/fragment_add_compare.xml
@@ -31,7 +31,7 @@
                     android:id="@+id/add_compare_et_question"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Question" />
+                    android:hint="@string/hint_question" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="18dp"
-                android:text="Variants"
+                android:text="@string/hint_variants"
                 android:textColor="@color/colorTextPrimary"
                 android:textSize="18sp" />
 
@@ -77,7 +77,7 @@
                             android:id="@+id/add_compare_et_first_variant"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Description" />
+                            android:hint="@string/hint_description" />
 
                     </android.support.design.widget.TextInputLayout>
 
@@ -109,7 +109,7 @@
                             android:id="@+id/add_compare_et_second_variant"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Description" />
+                            android:hint="@string/hint_description" />
 
                     </android.support.design.widget.TextInputLayout>
 
