--- a/app/src/main/res/layout/fragment_preview_compare.xml
+++ b/app/src/main/res/layout/fragment_preview_compare.xml
@@ -108,7 +108,7 @@
                 android:drawablePadding="2dp"
                 android:gravity="center"
                 android:paddingTop="4dp"
-                android:text="Chas poistu"
+                tools:text="Chas poistu"
                 android:textColor="#000000"
                 android:textSize="16sp" />
 
@@ -120,7 +120,7 @@
                 android:layout_marginTop="4dp"
                 android:button="@drawable/icon_like_black_selector"
                 android:gravity="center"
-                android:paddingLeft="4dp"
+                tools:paddingLeft="4dp"
                 android:textColor="@color/colorTextPrimary"
                 android:textSize="@dimen/medium_text_size"
                 tools:text="14" />
@@ -148,7 +148,7 @@
                 android:drawablePadding="2dp"
                 android:gravity="center"
                 android:paddingTop="4dp"
-                android:text="Felichita"
+                tools:text="Felichita"
                 android:textColor="#000000"
                 android:textSize="16sp" />
 
