--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,6 +8,7 @@
         android:id="@+id/recycler_view_search_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:overScrollMode="never"
         android:scrollbars="vertical" />
 
 </LinearLayout>
