--- a/app/src/main/res/menu/menu_forward.xml
+++ b/app/src/main/res/menu/menu_forward.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/action_forward"
         android:icon="@drawable/icon_forward"
-        android:title="Forward"
+        android:title="@string/action_forward"
         app:showAsAction="always" />
 </menu>
