--- a/app/src/main/res/layout/tip_item_layout.xml
+++ b/app/src/main/res/layout/tip_item_layout.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/help_iv_picture"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:scaleType="fitCenter" />
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -20,13 +21,17 @@
         <TextView
             android:id="@+id/help_tv_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/help_tv_tip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="gravity" />
+            android:textAlignment="gravity"
+            android:textSize="@dimen/text_size_pre_normal" />
 
     </LinearLayout>
 </LinearLayout>
