update splash screen

--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -8,6 +8,6 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/logo_small" />
+            android:src="@drawable/logo_big" />
     </item>
 </layer-list>
