--- a/app/src/main/res/layout/details_header_layout.xml
+++ b/app/src/main/res/layout/details_header_layout.xml
@@ -117,9 +117,9 @@
                 android:drawablePadding="2dp"
                 android:gravity="center"
                 android:paddingTop="4dp"
-                tools:text="Chas poistu"
                 android:textColor="#000000"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                tools:text="Chas poistu" />
 
             <CheckBox
                 android:id="@+id/details_ch_like_first"
@@ -157,9 +157,9 @@
                 android:drawablePadding="2dp"
                 android:gravity="center"
                 android:paddingTop="4dp"
-                tools:text="Felichita"
                 android:textColor="#000000"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                tools:text="Felichita" />
 
             <CheckBox
                 android:id="@+id/details_ch_like_second"
@@ -198,8 +198,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:drawableRight="@drawable/icon_comments"
             android:drawablePadding="6dp"
+            android:drawableRight="@drawable/icon_comments"
+            android:gravity="center"
             android:textColor="@color/colorTextSecondary"
             android:textSize="@dimen/medium_text_size"
             tools:text="12" />
