--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -3,30 +3,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <MultiSelectListPreference
-        android:defaultValue="@array/categories_codes"
-        android:entries="@array/categories"
-        android:entryValues="@array/categories_codes"
-        android:key="@string/settings_categories"
-        android:summary="No categories selected"
-        android:title="Categories in main tab" />
+    <PreferenceCategory android:title="Base">
 
-    <ListPreference
-        android:defaultValue="5"
-        android:dialogTitle="Choose number of compares"
-        android:entries="@array/numbers_of_compares"
-        android:entryValues="@array/numbers_of_compares"
-        android:key="@string/settings_numbers_of_compares"
-        android:summary="Show %s compares in all tab"
-        android:title="Number of all compares" />
+        <MultiSelectListPreference
+            android:defaultValue="@array/categories_codes"
+            android:entries="@array/categories"
+            android:entryValues="@array/categories_codes"
+            android:key="@string/settings_categories"
+            android:summary="No categories selected"
+            android:title="Categories in main tab" />
 
-    <ListPreference
-        android:defaultValue="English"
-        android:dialogTitle="Choose language of application"
-        android:entries="@array/languages"
-        android:entryValues="@array/languages"
-        android:key="@string/settings_language"
-        android:summary="%s"
-        android:title="Language" />
+        <ListPreference
+            android:defaultValue="5"
+            android:dialogTitle="Choose number of compares"
+            android:entries="@array/numbers_of_compares"
+            android:entryValues="@array/numbers_of_compares"
+            android:key="@string/settings_numbers_of_compares"
+            android:summary="Show %s compares in all tab"
+            android:title="Number of all compares" />
+    </PreferenceCategory>
+
+    <!--<ListPreference-->
+    <!--android:defaultValue="English"-->
+    <!--android:dialogTitle="Choose language of application"-->
+    <!--android:entries="@array/languages"-->
+    <!--android:entryValues="@array/languages"-->
+    <!--android:key="@string/settings_language"-->
+    <!--android:summary="%s"-->
+    <!--android:title="Language" />-->
+
+    <PreferenceCategory android:title="Notifications">
+
+        <ListPreference
+            android:defaultValue="On"
+            android:dialogTitle="Set state notification"
+            android:entries="@array/notifications"
+            android:entryValues="@array/notifications_code"
+            android:key="@string/settings_notifications_liked"
+            android:summary="%s"
+            android:title="Someone liked my compare" />
+
+        <ListPreference
+            android:defaultValue="On"
+            android:dialogTitle="Set state notification"
+            android:entries="@array/notifications"
+            android:entryValues="@array/notifications_code"
+            android:key="@string/settings_notifications_commented"
+            android:summary="%s"
+            android:title="Someone add a comment to my compare" />
+
+        <ListPreference
+            android:defaultValue="On"
+            android:dialogTitle="Set state notification"
+            android:entries="@array/notifications"
+            android:entryValues="@array/notifications_code"
+            android:key="@string/settings_notifications_f_new_compare"
+            android:summary="%s"
+            android:title="Someone in following list create new compare" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
