--- a/app/src/main/res/layout/user_item_layout.xml
+++ b/app/src/main/res/layout/user_item_layout.xml
@@ -6,7 +6,8 @@
     android:layout_marginBottom="8dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    android:layout_marginTop="8dp">
+    android:layout_marginTop="8dp"
+    android:background="@drawable/card_foreground">
 
     <ImageView
         android:id="@+id/user_rv_iv_avatar"
