--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -21,16 +22,8 @@
             android:key="@string/settings_numbers_of_compares"
             android:summary="Show %s compares in all tab"
             android:title="Number of all compares" />
-    </PreferenceCategory>
 
-    <!--<ListPreference-->
-    <!--android:defaultValue="English"-->
-    <!--android:dialogTitle="Choose language of application"-->
-    <!--android:entries="@array/languages"-->
-    <!--android:entryValues="@array/languages"-->
-    <!--android:key="@string/settings_language"-->
-    <!--android:summary="%s"-->
-    <!--android:title="Language" />-->
+    </PreferenceCategory>
 
     <PreferenceCategory android:title="Notifications">
 
@@ -59,7 +52,9 @@
             android:entryValues="@array/notifications_code"
             android:key="@string/settings_notifications_f_new_compare"
             android:summary="%s"
-            android:title="Someone in following list create new compare" />
+            android:title="Someone in following list create new compare"
+            app:defaultValue="On" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
